--- a/.github/workflows/sync-from-notion.yml
+++ b/.github/workflows/sync-from-notion.yml
@@ -24,8 +24,13 @@ jobs:
               with:
                   node-version: 16
 
+            - name: Install pnpm
+              uses: pnpm/action-setup@v2
+              with:
+                  version: 8
+
             - name: Install dependencies
-              run: yarn install --frozen-lockfile
+              run: pnpm install --frozen-lockfile
 
             - name: 'Create env file'
               run: |
